fixed setting layout - align left instead of margin auto(center)

--- a/client/src/components/AdminDashboard/TravelOrder.css
+++ b/client/src/components/AdminDashboard/TravelOrder.css
@@ -121,6 +121,10 @@ overflow-wrap:break-word;
     padding: 0.3rem 1.2rem;
 }
 
+.setting {
+    margin: 1rem 2rem;
+}
+
 .admin-settings {
     text-align-last: left;
     padding: 1rem;
